Add solution for 03. Students

--- a/03. Remote Data and Authentication - Exercise/03.Students/index.html
+++ b/03. Remote Data and Authentication - Exercise/03.Students/index.html
@@ -19,6 +19,17 @@
         </thead>
         <tbody></tbody>
     </table>
+    <form id="CreateStudentForm">
+        <h3>Form</h3>
+        <div class="form-group">
+            <input type="text" name="firstName" placeholder="First Name...">
+            <input type="text" name="lastName" placeholder="Last Name...">
+            <input type="text" name="facultyNumber" placeholder="Faculty Number...">
+            <input type="number" name="grade" placeholder="Grade...">
+        </div>
+        <button>Submit</button>
+        <div id="error"></div>
+    </form>
     <script src="./app.js"></script>
 </body>
 
