--- a/03. Remote Data and Authentication - Exercise/03.Students/index.html
+++ b/03. Remote Data and Authentication - Exercise/03.Students/index.html
@@ -8,28 +8,39 @@
 </head>
 
 <body>
-    <table id="results">
-        <thead>
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Faculty Number</th>
-                <th>Grade</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-    <form id="CreateStudentForm">
-        <h3>Form</h3>
-        <div class="form-group">
-            <input type="text" name="firstName" placeholder="First Name...">
-            <input type="text" name="lastName" placeholder="Last Name...">
-            <input type="text" name="facultyNumber" placeholder="Faculty Number...">
-            <input type="number" name="grade" placeholder="Grade...">
+    <div class="container">
+        <table id="results">
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Faculty Number</th>
+                    <th>Grade</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+        <div class="container-form">
+            <h3>FORM</h3>
+            <form id="form">
+                <div class="labels">
+                    <label>First Name</label>
+                    <label>Last Name</label>
+                    <label>Faculty Number</label>
+                    <label>Grade</label>
+                </div>
+                <div class="inputs">
+                    <input type="text" name="firstName" placeholder="First Name...">
+                    <input type="text" name="lastName" placeholder="Last Name...">
+                    <input type="text" name="facultyNumber" placeholder="Faculty Number...">
+                    <input type="text" name="grade"  placeholder="Grade...">
+                </div>
+                <p class="notification"></p>
+                <button id="submit">Submit</button>
+            </form>
         </div>
-        <button>Submit</button>
-        <div id="error"></div>
-    </form>
+    </div>
+
     <script src="./app.js"></script>
 </body>
 
