--- a/03. Remote Data and Authentication - Exercise/05.Fisher-Game/index.html
+++ b/03. Remote Data and Authentication - Exercise/05.Fisher-Game/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biggest Catch</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="./static/styles.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <nav>
             <a class="active">Home</a>
             <div id="guest">
-                <a href="login.html">Login</a>
+                <a href="./login.html">Login</a>
             </div>
         </nav>
     </header>
@@ -89,7 +89,6 @@
             </fieldset>
         </aside>
     </main>
-    <script src="/app.js"></script>
 </body>
-
+<script src="./app.js"></script>
 </html>
