--- a/03. Remote Data and Authentication - Exercise/05.Fisher-Game/login.html
+++ b/03. Remote Data and Authentication - Exercise/05.Fisher-Game/login.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biggest Catch</title>
-    <link rel="stylesheet" href="/static/styles.css">
-    <link rel="stylesheet" href="/static/login.css">
+    <link rel="stylesheet" href="./static/styles.css">
+    <link rel="stylesheet" href="./static/login.css">
 </head>
 
 <body>
     <header>
         <h1>Biggest Catch</h1>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="./index.html">Home</a>
             <div id="guest">
-                <a href="login.html" class="active">Login</a>
+                <a href="./login.html" class="active">Login</a>
             </div>
         </nav>
     </header>
@@ -52,5 +52,6 @@
         </div>
     </main>
 </body>
-
+<script src="./login.js"></script>
+<script src="./register.js"></script>
 </html>
