--- a/03. Remote Data and Authentication - Exercise/06.Furniture/home.html
+++ b/03. Remote Data and Authentication - Exercise/06.Furniture/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="./static/style.css">
     <title>FURNITURE</title>
 </head>
 
@@ -11,13 +11,12 @@
         <h1>Furniture List</h1>
         <nav>
             <a class="active">Catalog</a>
-            <!-- <div id="user">
-                <a href="create.html">Create Product</a>
+            <div id="user">
+                <a href="./homeLogged.html">Create Product</a>
                 <a id="logoutBtn" href="javascript:void(0)">Logout</a>
-            </div> -->
+            </div>
             <div id="guest">
-                <a href="login.html">Login</a>
-                <!-- <a href="register.html">Register</a> -->
+                <a href="./login.html">Login</a>
             </div>
         </nav>
     </header>
@@ -92,7 +91,8 @@
             </div>
         </div>
     </main>
-    <script src="solution.js"></script>
+    <script src="./solution.js"></script>
+    <script src="./logout.js"></script>
 </body>
 
 </html>
