--- a/03. Remote Data and Authentication - Exercise/06.Furniture/login.html
+++ b/03. Remote Data and Authentication - Exercise/06.Furniture/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="./static/style.css">
     <title>FURNITURE</title>
 </head>
 
@@ -10,14 +10,9 @@
     <header>
         <h1>Furniture List</h1>
         <nav>
-            <a href="home.html">Catalog</a>
-            <!-- <div id="user">
-                <a href="create.html">Create Product</a>
-                <a id="logoutBtn" href="javascript:void(0)">Logout</a>
-            </div> -->
+            <a href="./home.html">Catalog</a>
             <div id="guest">
-                <a href="login.html" class="active">Login</a>
-                <!-- <a href="register.html" class="active">Register</a> -->
+                <a href="./login.html" class="active">Login</a>
             </div>
         </nav>
     </header>
@@ -56,7 +51,8 @@
             </div>
         </div>
     </main>
-    <script src="solution.js"></script>
+    <script src="./register.js"></script>
+    <script src="./login.js"></script>
 </body>
 
 </html>
