--- a/04. SPA Applications/02. Cookbook - Part 3/index.html
+++ b/04. SPA Applications/02. Cookbook - Part 3/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>My Cookbook</title>
-    <link rel="stylesheet" href="static/site.css">
-    <link rel="stylesheet" href="static/recipe.css">
-    <script src="/src/app.js"></script>
+    <link rel="stylesheet" href="./static/site.css">
+    <link rel="stylesheet" href="./static/recipe.css">
 </head>
 
 <body>
@@ -15,12 +14,12 @@
         <nav>
             <a class="active">Catalog</a>
             <div id="user">
-                <a href="create.html">Create Recipe</a>
+                <a href="./create.html">Create Recipe</a>
                 <a id="logoutBtn" href="javascript:void(0)">Logout</a>
             </div>
             <div id="guest">
-                <a href="login.html">Login</a>
-                <a href="register.html">Register</a>
+                <a href="./login.html">Login</a>
+                <a href="./register.html">Register</a>
             </div>
         </nav>
     </header>
@@ -28,5 +27,8 @@
         <p style="color: white">Loading...</p>
     </main>
 </body>
+
+<script src="./src/app.js"></script>
+<script src="./src/logout.js"></script>
 
 </html>
