--- a/04. SPA Applications/02. Cookbook - Part 3/create.html
+++ b/04. SPA Applications/02. Cookbook - Part 3/create.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>My Cookbook</title>
-    <link rel="stylesheet" href="static/site.css">
-    <link rel="stylesheet" href="static/recipe.css">
-    <link rel="stylesheet" href="static/form.css">
-    <script defer src="/src/create.js"></script>
+    <link rel="stylesheet" href="./static/site.css">
+    <link rel="stylesheet" href="./static/recipe.css">
+    <link rel="stylesheet" href="./static/form.css">
 </head>
 
 <body>
     <header>
         <h1>My Cookbook</h1>
         <nav>
-            <a href="index.html">Catalog</a>
+            <a href="./index.html">Catalog</a>
             <a class="active">Create Recipe</a>
+            <a id="logoutBtn" href="javascript:void(0)">Logout</a>
         </nav>
     </header>
     <main>
@@ -31,5 +31,8 @@
         </article>
     </main>
 </body>
+
+<script src="./src/logout.js"></script>
+<script src="./src/recipes.js"></script>
 
 </html>
