--- a/04. SPA Applications/02. Cookbook - Part 3/login.html
+++ b/04. SPA Applications/02. Cookbook - Part 3/login.html
@@ -4,19 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>My Cookbook</title>
-    <link rel="stylesheet" href="static/site.css">
-    <link rel="stylesheet" href="static/recipe.css">
-    <link rel="stylesheet" href="static/form.css">
-    <script defer src="/src/login.js"></script>
+    <link rel="stylesheet" href="./static/site.css">
+    <link rel="stylesheet" href="./static/recipe.css">
+    <link rel="stylesheet" href="./static/form.css">
 </head>
 
 <body>
     <header>
         <h1>My Cookbook</h1>
         <nav>
-            <a href="index.html">Catalog</a>
+            <a href="./index.html">Catalog</a>
             <a class="active">Login</a>
-            <a href="register.html">Register</a>
+            <a href="./register.html">Register</a>
         </nav>
     </header>
     <main>
@@ -30,5 +29,7 @@
         </article>
     </main>
 </body>
+
+<script defer src="./src/login.js"></script>
 
 </html>
