--- a/04. SPA Applications/02. Cookbook - Part 3/register.html
+++ b/04. SPA Applications/02. Cookbook - Part 3/register.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>My Cookbook</title>
-    <link rel="stylesheet" href="static/site.css">
-    <link rel="stylesheet" href="static/recipe.css">
-    <link rel="stylesheet" href="static/form.css">
-    <script defer src="/src/register.js"></script>
+    <link rel="stylesheet" href="./static/site.css">
+    <link rel="stylesheet" href="./static/recipe.css">
+    <link rel="stylesheet" href="./static/form.css">
 </head>
 
 <body>
@@ -31,5 +30,7 @@
         </article>
     </main>
 </body>
+
+<script src="./src/register.js"></script>
 
 </html>
