--- a/04. SPA Applications/02. Cookbook - Part 3/index.html
+++ b/04. SPA Applications/02. Cookbook - Part 3/index.html
@@ -6,29 +6,72 @@
     <title>My Cookbook</title>
     <link rel="stylesheet" href="./static/site.css">
     <link rel="stylesheet" href="./static/recipe.css">
+    <link rel="stylesheet" href="./static/form.css">
 </head>
 
 <body>
     <header>
         <h1>My Cookbook</h1>
         <nav>
-            <a class="active">Catalog</a>
+            <a id="CatalogButton" class="active" href="./index.html">Catalog</a>
             <div id="user">
-                <a href="./create.html">Create Recipe</a>
-                <a id="logoutBtn" href="javascript:void(0)">Logout</a>
+                <a id="CreateRecipeButton" href="./create.html">Create Recipe</a>
+                <a id="LogoutButton" href="javascript:void(0)">Logout</a>
             </div>
             <div id="guest">
-                <a href="./login.html">Login</a>
-                <a href="./register.html">Register</a>
+                <a id="LoginButton" href="./login.html">Login</a>
+                <a id="RegisterButton" href="./register.html">Register</a>
             </div>
         </nav>
     </header>
     <main>
-        <p style="color: white">Loading...</p>
     </main>
+
+    <div id="Views">
+        <section id="CatalogSection">
+            <p style="color: white">Loading...</p>
+        </section>
+
+        <section id="CreateRecipeSection">
+            <article>
+                <h2>New Recipe</h2>
+                <form>
+                    <label>Name: <input type="text" name="name" placeholder="Recipe name"></label>
+                    <label>Image: <input type="text" name="img" placeholder="Image URL"></label>
+                    <label class="ml">Ingredients: <textarea name="ingredients"
+                            placeholder="Enter ingredients on separate lines"></textarea></label>
+                    <label class="ml">Preparation: <textarea name="steps"
+                            placeholder="Enter preparation steps on separate lines"></textarea></label>
+                    <input type="submit" value="Create Recipe">
+                </form>
+            </article>
+        </section>
+
+        <section id="LoginSection">
+            <article>
+                <h2>Login</h2>
+                <form>
+                    <label>E-mail: <input type="text" name="email"></label>
+                    <label>Password: <input type="password" name="password"></label>
+                    <input type="submit" value="Login">
+                </form>
+            </article>
+        </section>
+
+        <section id="RegisterSection">
+            <article>
+                <h2>Register</h2>
+                <form>
+                    <label>E-mail: <input type="text" name="email"></label>
+                    <label>Password: <input type="password" name="password"></label>
+                    <label>Repeat: <input type="password" name="rePass"></label>
+                    <input type="submit" value="Register">
+                </form>
+            </article>
+        </section>
+    </div>
 </body>
 
-<script src="./src/app.js"></script>
-<script src="./src/logout.js"></script>
+<script type="module" src="./src/app.js"></script>
 
 </html>
