Add details, edit and delete for a recipe

--- a/04. SPA Applications/02. Cookbook - Part 3/index.html
+++ b/04. SPA Applications/02. Cookbook - Part 3/index.html
@@ -47,6 +47,25 @@
             </article>
         </section>
 
+        <section id="RecipeDetails">
+            <p style="color: white">Loading...</p>
+        </section>
+
+        <section id="EditRecipe">
+            <article>
+                <h2>Edit Recipe</h2>
+                <form>
+                    <label>Name: <input type="text" name="name" placeholder="Recipe name"></label>
+                    <label>Image: <input type="text" name="img" placeholder="Image URL"></label>
+                    <label class="ml">Ingredients: <textarea name="ingredients"
+                            placeholder="Enter ingredients on separate lines"></textarea></label>
+                    <label class="ml">Preparation: <textarea name="steps"
+                            placeholder="Enter preparation steps on separate lines"></textarea></label>
+                    <input type="submit" value="Update Recipe">
+                </form>
+            </article>
+        </section>
+
         <section id="LoginSection">
             <article>
                 <h2>Login</h2>
