Add full solution

--- a/07. Routing - Exercise/01.Furniture/index.html
+++ b/07. Routing - Exercise/01.Furniture/index.html
@@ -17,7 +17,8 @@
             <a id="catalogLink" href="/index" class="active">Dashboard</a>
             <div id="user">
                 <a id="createLink" href="/create">Create Furniture</a>
-                <a id="logoutBtn" href="javascript:void(0)">Logout</a>
+                <a id="myPublications" href="/my-furnitures">My Publications</a>
+                <a id="logoutBtn" href="/logout">Logout</a>
             </div>
             <div id="guest">
                 <a id="loginLink" href="/login">Login</a>
